Fix for Edge
Fix so that titles aren't truncated to elipsis in Edge browser.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -691,6 +691,7 @@ a img {
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     display: -webkit-box;
+    white-space: nowrap;
 }
 
 .NB-feedlist .feed .NB-feedlist-manage-icon,
